--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "9.0.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
