--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
+    "@types/jest": "^29.4.4",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
@@ -64,11 +64,11 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.3",
+    "jest": "^29.5.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
@@ -80,7 +80,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -99,12 +99,15 @@
       ".*module.ts$"
     ],
     "roots": [
-      "<rootDir>/apps/",
+      "<rootDir>/app/",
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
       "@lib/database(|/.*)$": "<rootDir>/libs/database/$1",
-      "@lib/entities(|/.*)$": "<rootDir>/libs/entities/$1"
+      "@lib/entities(|/.*)$": "<rootDir>/libs/entities/$1",
+      "@lib/jwt(|/.*)$": "<rootDir>/libs/jwt/$1",
+      "@lib/utils(|/.*)$": "<rootDir>/libs/utils/$1",
+      "@lib/decorators(|/.*)$": "<rootDir>/libs/decorators/$1"
     }
   }
 }
