--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "9.0.1",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.29.3",
+    "mercadopago": "^1.5.15",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -46,6 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "ts-pattern": "^4.2.1",
     "typeorm": "0.3.11"
   },
   "devDependencies": {
@@ -55,6 +58,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.4.4",
+    "@types/mercadopago": "^1.5.8",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
@@ -110,7 +114,8 @@
       "@lib/utils(|/.*)$": "<rootDir>/libs/utils/$1",
       "@lib/decorators(|/.*)$": "<rootDir>/libs/decorators/$1",
       "@lib/enums(|/.*)$": "<rootDir>/libs/enums/$1",
-      "@lib/generate-password(|/.*)$": "<rootDir>/libs/generate-password/$1"
+      "@lib/generate-password(|/.*)$": "<rootDir>/libs/generate-password/$1",
+      "@lib/mercado-pago(|/.*)$": "<rootDir>/libs/mercado-pago/$1"
     }
   }
 }
