--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "9.0.1",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -115,7 +116,8 @@
       "@lib/decorators(|/.*)$": "<rootDir>/libs/decorators/$1",
       "@lib/enums(|/.*)$": "<rootDir>/libs/enums/$1",
       "@lib/generate-password(|/.*)$": "<rootDir>/libs/generate-password/$1",
-      "@lib/mercado-pago(|/.*)$": "<rootDir>/libs/mercado-pago/$1"
+      "@lib/mercado-pago(|/.*)$": "<rootDir>/libs/mercado-pago/$1",
+      "@lib/emails(|/.*)$": "<rootDir>/libs/emails/$1"
     }
   }
 }
