--- a/ci/cloudbuild-backend.yaml
+++ b/ci/cloudbuild-backend.yaml
@@ -14,13 +14,13 @@ steps:
         '.',
       ]
 
-  # - id: Tag previous dev-latest as dev-fallback
-  #   name: 'gcr.io/cloud-builders/gcloud-slim'
-  #   entrypoint: bash
-  #   args:
-  #     - -c
-  #     - |
-  #       gcloud artifacts docker tags add ${_DOCKER_REGISTRY}:latest ${_DOCKER_REGISTRY}:fallback
+  - id: Tag previous dev-latest as dev-fallback
+    name: 'gcr.io/cloud-builders/gcloud-slim'
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        gcloud artifacts docker tags add ${_DOCKER_REGISTRY}:latest ${_DOCKER_REGISTRY}:fallback
 
   - id: Docker Push
     name: 'gcr.io/cloud-builders/docker'
@@ -50,7 +50,7 @@ logsBucket: 'gs://socio-torcedor-api-cicd-merge-build-logs'
 timeout: 1800s
 
 substitutions:
-  _DOCKER_REGISTRY: us-east1-docker.pkg.dev/socio-torcedor-api/socio-torcedor
+  _DOCKER_REGISTRY: us-central1-docker.pkg.dev/socio-torcedor-api/socio-torcedor
 
 options:
   machineType: 'E2_HIGHCPU_8'
