--- a/ci/cloudbuild-backend.yaml
+++ b/ci/cloudbuild-backend.yaml
@@ -5,22 +5,22 @@ steps:
       [
         'build',
         '-t',
-        '${_DOCKER_REGISTRY}:${SHORT_SHA}',
+        '${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}',
         '-t',
-        '${_DOCKER_REGISTRY}:latest',
+        '${_DOCKER_REGISTRY}/${_SERVICE}:latest',
         '--no-cache',
         '-f',
         'ci/Dockerfile',
         '.',
       ]
 
-  # - id: Tag previous dev-latest as dev-fallback
-  #   name: 'gcr.io/cloud-builders/gcloud-slim'
-  #   entrypoint: bash
-  #   args:
-  #     - -c
-  #     - |
-  #       gcloud artifacts docker tags add ${_DOCKER_REGISTRY}:latest ${_DOCKER_REGISTRY}:fallback
+  - id: Tag previous dev-latest as dev-fallback
+    name: 'gcr.io/cloud-builders/gcloud-slim'
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        gcloud artifacts docker tags add ${_DOCKER_REGISTRY}/${_SERVICE}:latest ${_DOCKER_REGISTRY}/${_SERVICE}:fallback
 
   - id: Docker Push
     name: 'gcr.io/cloud-builders/docker'
@@ -28,7 +28,7 @@ steps:
     args:
       - -c
       - |
-        docker push --all-tags ${_DOCKER_REGISTRY}
+        docker push --all-tags ${_DOCKER_REGISTRY}/${_SERVICE}
 
   - id: 'Terraform deploy'
     name: 'hashicorp/terraform:1.1.8'
@@ -40,7 +40,7 @@ steps:
         cd infrastructure/terraform
         terraform init
         terraform validate
-        terraform apply -auto-approve -var="project_id=socio-torcedor-api" -var="docker_image_name=${_DOCKER_REGISTRY}:${SHORT_SHA}"
+        terraform apply -auto-approve -var="project_id=socio-torcedor-api" -var="docker_image_name=${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}"
   - id: Run Integration Tests on dev
     name: 'alpine'
     args: ['echo', '"Put your Integration tests here!"']
@@ -51,6 +51,7 @@ timeout: 1800s
 
 substitutions:
   _DOCKER_REGISTRY: us-central1-docker.pkg.dev/socio-torcedor-api/socio-torcedor
+  _SERVICE: socio-torcedor-backend
 
 options:
   machineType: 'E2_HIGHCPU_8'
