--- a/ci/cloudbuild-backend.yaml
+++ b/ci/cloudbuild-backend.yaml
@@ -1,46 +1,34 @@
 steps:
-  # - id: Docker Build
-  #   name: 'gcr.io/cloud-builders/docker'
-  #   args:
-  #     [
-  #       'build',
-  #       '-t',
-  #       '${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}',
-  #       '-t',
-  #       '${_DOCKER_REGISTRY}/${_SERVICE}:latest',
-  #       '--no-cache',
-  #       '-f',
-  #       'ci/Dockerfile',
-  #       '.',
-  #     ]
+  - id: Docker Build
+    name: 'gcr.io/cloud-builders/docker'
+    args:
+      [
+        'build',
+        '-t',
+        '${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}',
+        '-t',
+        '${_DOCKER_REGISTRY}/${_SERVICE}:latest',
+        '--no-cache',
+        '-f',
+        'ci/Dockerfile',
+        '.',
+      ]
 
-  # - id: Tag previous dev-latest as dev-fallback
-  #   name: 'gcr.io/cloud-builders/gcloud-slim'
-  #   entrypoint: bash
-  #   args:
-  #     - -c
-  #     - |
-  #       gcloud artifacts docker tags add ${_DOCKER_REGISTRY}/${_SERVICE}:latest ${_DOCKER_REGISTRY}/${_SERVICE}:fallback
+  - id: Tag previous dev-latest as dev-fallback
+    name: 'gcr.io/cloud-builders/gcloud-slim'
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        gcloud artifacts docker tags add ${_DOCKER_REGISTRY}/${_SERVICE}:latest ${_DOCKER_REGISTRY}/${_SERVICE}:fallback
 
-  # - id: Docker Push
-  #   name: 'gcr.io/cloud-builders/docker'
-  #   entrypoint: 'bash'
-  #   args:
-  #     - -c
-  #     - |
-  #       docker push --all-tags ${_DOCKER_REGISTRY}/${_SERVICE}
-
-  # - id: 'Terraform deploy'
-  #   name: 'hashicorp/terraform:1.3.9'
-  #   entrypoint: 'sh'
-  #   args:
-  #     - '-c'
-  #     - |
-  #       ls -la
-  #       cd infrastructure/terraform
-  #       terraform init
-  #       terraform validate
-  #       terraform apply -auto-approve -var="project_id=socio-torcedor-api" -var="docker_image_name=${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}"
+  - id: Docker Push
+    name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
+    args:
+      - -c
+      - |
+        docker push --all-tags ${_DOCKER_REGISTRY}/${_SERVICE}
 
   - id: 'Terraform deploy'
     name: 'hashicorp/terraform:1.3.9'
@@ -52,7 +40,7 @@ steps:
         cd infrastructure/terraform
         terraform init
         terraform validate
-        terraform apply -auto-approve -var="project_id=socio-torcedor-api" -var="docker_image_name=${_DOCKER_REGISTRY}/${_SERVICE}:latest"
+        terraform apply -auto-approve -var="project_id=socio-torcedor-api" -var="docker_image_name=${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}"
 
 logsBucket: 'gs://socio-torcedor-api-cicd-merge-build-logs'
 
