add firewall and secrets

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,13 @@ POSTGRES_LOGGING=false
 JWT_SECRET=
 JWT_EXPIRATION_TIME=1d
 
+SUPER_ADMIN_NAME=
+SUPER_ADMIN_EMAIL=
+SUPER_ADMIN_SECRET=
+SUPER_ADMIN_TAX_ID=
+
+MERCADO_PAGO_API_URL=https://api.mercadopago.com
+MERCADO_PAGO_PUBLIC_KEY=
+MERCADO_PAGO_ACCESS_TOKEN=
+
 SG_TOKEN=
