--- a/Dockerfile.migration
+++ b/Dockerfile.migration
@@ -11,7 +11,8 @@ RUN yarn add \
     ts-node \
     tsconfig-paths@4.1.2 \
     typescript @types/node \
-    pg@8.9.0
+    pg@8.9.0 \
+    @nestjs/swagger
 
 COPY . .
 
