--- a/Dockerfile.migration
+++ b/Dockerfile.migration
@@ -4,7 +4,7 @@ FROM node:18-alpine as BUILD_IMAGE
 RUN apk update && apk add yarn curl bash &&\
     rm -rf /var/cache/apk/*
 
-WORKDIR /usr/src
+WORKDIR /usr/src/app
 
 RUN yarn add \
     typeorm@0.3.11 \ 
@@ -18,19 +18,19 @@ COPY . .
 #########
 FROM alpine
 
-WORKDIR /usr/src
+WORKDIR /usr/src/app
 
 RUN apk add --update --no-cache nodejs=18.14.2-r0 yarn &&  rm -rf /var/cache/apk/*
 
 RUN addgroup -g 1001 migrathor && adduser -S -u 1001 -G migrathor migrathor
 
-COPY --chown=migrathor:migrathor --from=BUILD_IMAGE /usr/src/tsconfig.json \
-    /usr/src/package.json \
-    /usr/src/yarn.lock ./
+COPY --chown=migrathor:migrathor --from=BUILD_IMAGE /usr/src/app/tsconfig.json \
+    /usr/src/app/package.json \
+    /usr/src/app/yarn.lock ./
 
-COPY --chown=migrathor:migrathor --from=BUILD_IMAGE /usr/src/libs ./libs
-COPY --chown=migrathor:migrathor --from=BUILD_IMAGE /usr/src/apps ./apps
-COPY --chown=migrathor:migrathor --from=BUILD_IMAGE /usr/src/node_modules ./node_modules
+COPY --chown=migrathor:migrathor --from=BUILD_IMAGE /usr/src/app/libs ./libs
+COPY --chown=migrathor:migrathor --from=BUILD_IMAGE /usr/src/app/apps ./app
+COPY --chown=migrathor:migrathor --from=BUILD_IMAGE /usr/src/app/node_modules ./node_modules
 
 USER migrathor
 
