--- a/ci/cloudbuild-backend.yaml
+++ b/ci/cloudbuild-backend.yaml
@@ -1,37 +1,49 @@
 steps:
-  - id: Docker Build
-    name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'build',
-        '-t',
-        '${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}',
-        '-t',
-        '${_DOCKER_REGISTRY}/${_SERVICE}:latest',
-        '--no-cache',
-        '-f',
-        'Dockerfile',
-        '.',
-      ]
+  # - id: Docker Build
+  #   name: 'gcr.io/cloud-builders/docker'
+  #   args:
+  #     [
+  #       'build',
+  #       '-t',
+  #       '${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}',
+  #       '-t',
+  #       '${_DOCKER_REGISTRY}/${_SERVICE}:latest',
+  #       '--no-cache',
+  #       '-f',
+  #       'Dockerfile',
+  #       '.',
+  #     ]
 
-  - id: Tag previous dev-latest as dev-fallback
-    name: 'gcr.io/cloud-builders/gcloud-slim'
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        gcloud artifacts docker tags add ${_DOCKER_REGISTRY}/${_SERVICE}:latest ${_DOCKER_REGISTRY}/${_SERVICE}:fallback || exit 0
+  # - id: Tag previous dev-latest as dev-fallback
+  #   name: 'gcr.io/cloud-builders/gcloud-slim'
+  #   entrypoint: bash
+  #   args:
+  #     - -c
+  #     - |
+  #       gcloud artifacts docker tags add ${_DOCKER_REGISTRY}/${_SERVICE}:latest ${_DOCKER_REGISTRY}/${_SERVICE}:fallback || exit 0
 
-  - id: Docker Push
-    name: 'gcr.io/cloud-builders/docker'
-    entrypoint: 'bash'
-    args:
-      - -c
-      - |
-        docker push --all-tags ${_DOCKER_REGISTRY}/${_SERVICE}
+  # - id: Docker Push
+  #   name: 'gcr.io/cloud-builders/docker'
+  #   entrypoint: 'bash'
+  #   args:
+  #     - -c
+  #     - |
+  #       docker push --all-tags ${_DOCKER_REGISTRY}/${_SERVICE}
+
+  # - id: 'Terraform deploy'
+  #   name: 'hashicorp/terraform:1.3.9'
+  #   entrypoint: 'sh'
+  #   args:
+  #     - '-c'
+  #     - |
+  #       ls -la
+  #       cd infrastructure/terraform
+  #       terraform init
+  #       terraform validate
+  #       terraform apply -auto-approve -var="project_id=socio-torcedor-api" -var="docker_image_name=${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}"
 
   - id: 'Terraform deploy'
-    name: 'hashicorp/terraform:1.1.8'
+    name: 'hashicorp/terraform:1.3.9'
     entrypoint: 'sh'
     args:
       - '-c'
@@ -40,7 +52,7 @@ steps:
         cd infrastructure/terraform
         terraform init
         terraform validate
-        terraform apply -auto-approve -var="project_id=socio-torcedor-api" -var="docker_image_name=${_DOCKER_REGISTRY}/${_SERVICE}:${SHORT_SHA}"
+        terraform apply -auto-approve -var="project_id=socio-torcedor-api" -var="docker_image_name=${_DOCKER_REGISTRY}/${_SERVICE}:latest"
 
 logsBucket: 'gs://socio-torcedor-api-cicd-merge-build-logs'
 
